--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -13,6 +13,7 @@ body {
     padding: 50px 60px;
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
+    background-color: gray;
 }
 
 #main h1 {
